Enhance fractal rendering with probability distribution and color intensity
- Added probability distribution for transformations to improve fractal drawing. Users can now adjust the probabilities to influence the rendering.
- Implemented color intensity shading for fractals based on the number of times a pixel is hit, providing a more detailed and visually appealing representation.
- Set a background color for the canvas to ensure non-hit pixels are visually distinct.
- Refactored the drawFractal method to incorporate these enhancements and improve code clarity.